add devise user and user controller, call back for permitted params

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,10 @@
 <h1>Art Content</h1>
 
 <p>Hola Amigx!</p>
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+      <%= article.title %>
+    </li>
+  <% end %>
+</ul>  
