add footer and style to login page

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Art Content</h1>
-
 <p>Hola Amigx!</p>
-<ul>
+<div class="landing-grid">
   <% @articles.each do |article| %>
     <li>
       <%= article.title %>
     </li>
   <% end %>
-</ul>  
+</div>
+
