--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-landing-grid {
-  background-color: #E2E0E8;
-}
+//landing-grid {
+//  background-color: #E2E0E8;
+//}
