--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,15 +8,12 @@
   <% end %>
 </div>
 
-  <div class="landing-grid">
-    <% @categories.each do |category| %>
-      <div class='category-articles'
-            style="background-image: linear-gradient(rgba(232, 199, 192,.1), rgba(232, 199, 192,.1)), url(<%= latest_article_cover(category) %>);">
-        <div class="d-flex flex-column">
-          <%= link_to category.name, category_path(category), class:'category-style pt-2 simple-link text-uppercase' %>
-          <span><%= article_by_category(category) %></span>
-        </div>
+<div class="landing-grid">
+  <% @categories.each do |category| %>
+    <div class='category-articles' %>
+      <div class="d-flex flex-column">
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
+</div>
 
