--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,7 @@
 <div class="landing-grid">
   <% @categories.each do |category| %>
     <div class='category-articles' %>
-      <div class="d-flex flex-column">
+      <div class="">
       </div>
     </div>
   <% end %>
