--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :text %><br/>
-    <%= form.text_area :text %>
+    <%= form.label :body %><br/>
+    <%= form.text_area :body %>
   </div>
 
   <div class="field my-3">
