--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="article-title">New Art Post</h1>
-  <% render 'form', article: @article %>
+  <%= render 'form', article: @article %>
 
-  <% link_to 'Back', articles_path %>
+  <%= link_to 'Back', articles_path %>
 </div>
