--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,14 @@
+/*
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+ * files in this directory. Styles in this file should be added after the last require_* statement.
+ * It is generally better to create a new file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ */
+ 
+
 // Color variables
 $dark-orange: #da2d08;
 $medium-orange: #f97210;
@@ -12,12 +23,7 @@ $white: #fff;
   src: url('../assets/Montserrat-Regular.ttf') format('truetype');
 }
 
-// Import Bootstrap
-@import 'bootstrap/scss/bootstrap';
 
-//
-// Default Style
-//
 
 // Fonts
 .montserrat {
