--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
   <div class="d-flex justify-content-center align-items-center m-0 p-0">
     <ul class="d-flex align-items-center m-0 p-0 simple-list">
       <% if current_user.nil? %>
-        <li><%= link_to 'Log in', sessions_path, class:'mr-2 simple-link' %></li>
+        <li><%= link_to 'Log in', session_path, class:'mr-2 simple-link' %></li>
         <span class="mx-2 font-weight-bold">|</span>
         <li><%= link_to 'Sign up', new_user_path, class:'mr-2 simple-link' %></li>
       <% else %>
