--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,7 @@
       <%= content_tag :p, @article.body, class: 'article-text' %>
     </div>
 
-    <% if @current_user == @article.author %>
+    <% if current_user == @article.author %>
       <%= link_to 'Edit', edit_article_path(@article) %>
     <% end %>
     <%= link_to 'Back', articles_path %>
