--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="d-flex flex-column">
     <%= content_tag :h2, @article.title, class: 'article-title' %>
+    <%= content_tag :h3, @article.author.name %>
     <%= "Total votes: #{@article.votes.all.count}" %>
     <%= render partial: "votes" %>
 
