fiz footer and style it

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,15 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-10 my-10 border-top footer">
-    <div class="col-md-4 d-flex align-items-center">
-      <span class="text-muted light-grey monsterrat">© 2021 Art Content, Inc</span>
+<footer class="d-flex justify-content-evenly align-items-center border-top footer fixed-botton">
+
+    <div class="justify-content-start">
+      <h3 class="white monsterrat mx-4">Art Content</h3>
     </div>
-<ul class="nav col-md-4 justify-content-end d-flex light-gray">
-      <li class="ms-3"><i class="fab fa-facebook-f"></i></li>
-      <li class="ms-3"><i class="fab fa-twitter"></i></li>
-      <li class="ms-3"><i class="fab fa-instagram"></i></li>
-    </ul>
-  </footer>
+    <div class="d-flex justify-content-center px-4">
+      <span class="text-muted light-grey monsterrat mr-4">© 2021 Art Content, Inc</span>
+    </div>
+    <div class="nav col-md-4 justify-content-end d-flex space-between container">
+      <i class="fab fa-2x fa-facebook-square medium-orange mx-2"></i>
+      <i class="fab fa-2x fa-instagram-square medium-orange mx-2"></i>
+      <i class="fab fa-2x fa-twitter-square medium-orange mx-2"></i>
+    </div>
+
+</footer>
