--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,8 +146,15 @@ $white: #fff;
 
 .footer {
   background-color: #504e4e;
+  width: 100vw;
   height: 100px;
   border-bottom: 0px;
   margin-top: 10px;
   padding-top: 5px;
+  //
+  position: absolute;
+  z-index: 1500;
+}
+
+.to-front {
 }
