--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-// Color variables
+//color
 $dark-orange: #da2d08;
 $medium-orange: #f97210;
 $medium-gray: #a1a1a1;
@@ -151,10 +151,6 @@ $white: #fff;
   border-bottom: 0px;
   margin-top: 10px;
   padding-top: 5px;
-  //
   position: absolute;
   z-index: 1500;
-}
-
-.to-front {
 }
