--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="d-flex justify-content-evenly align-items-center border-top footer fixed-botton">
+<footer class="d-flex wrapper justify-content-evenly align-items-center footer">
 
     <div class="justify-content-start">
       <h3 class="white monsterrat mx-4">Art Content</h3>
