--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <div class="container">
-  <div class="d-flex flex-column">
+  <div class="d-flex flex-column position-absolute bottom-0 start-0">
     <%= content_tag :h2, @article.title, class: 'article-title' %>
     <%= render partial: "votes" %>
 
