--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,10 +3,10 @@
     <div class="justify-content-start">
       <h3 class="white monsterrat mx-4">Art Content</h3>
     </div>
-    <div class="d-flex justify-content-center px-4">
-      <span class="text-muted light-grey monsterrat mr-4">© 2021 Art Content, Inc</span>
-    </div>
-    <div class="nav col-md-4 justify-content-end d-flex space-between container">
+      <div class="justify-content-center">
+        <span class="text-muted light-grey monsterrat">© 2021 Art Content, Inc</span>
+      </div> 
+     <div class="justify-content-end d-flex container icon">
       <i class="fab fa-2x fa-facebook-square medium-orange mx-2"></i>
       <i class="fab fa-2x fa-instagram-square medium-orange mx-2"></i>
       <i class="fab fa-2x fa-twitter-square medium-orange mx-2"></i>
