--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -37,7 +37,8 @@ $white: #fff;
 
 .body {
   font-family: montserrat, sans-serif;
-
+  height: 100vh;
+  overflow: hidden;
   ul,
   ol {
     list-style-type: none;
@@ -75,19 +76,18 @@ $white: #fff;
 }
 
 .landing-page {
-  height: 100vh;
+  // height: 100vh;
 }
 
 .landing-grid {
   display: grid;
   grid-template-columns: repeat(4, 25%);
-  height: 50vh;
-  margin-bottom: 0;
 }
 
 .category-articles {
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: $dark-gray;
 }
 
 .article-title {
@@ -95,26 +95,26 @@ $white: #fff;
 }
 
 .article-text {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .top {
   background-repeat: no-repeat;
   background-size: cover;
-  height: 50vh;
+  height: 44vh;
 }
 
 .top-title {
-  font-size: 24px;
-  padding: 20px;
+  font-size: 18px;
+  padding: 10px;
   color: $white !important;
   text-decoration: none !important;
 }
 
 .category-style {
   font-weight: bolder;
-  margin: 10px;
-  padding: 10px;
+  margin: 8px;
+  padding: 4px;
   color: $white !important;
 }
 
@@ -124,11 +124,13 @@ $white: #fff;
 }
 
 .categories-container {
-  height: 94vh;
+  height: 85vh;
+  // height: 94vh;
 }
 
 .half {
-  height: 50vh;
+  height: 40vh;
+  // height: 50vh;
 }
 
 .bg-cover {
@@ -148,6 +150,12 @@ $white: #fff;
 }
 
 .footer {
+  background-color: #504e4e;
   bottom: 0px;
   position:fixed;
+  z-index: 1500;
+}
+
+#landscape {
+  height: 50vh;
 }
