--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
       <% @categories.each do |category| %>
         <div class='category-articles d-flex flex-column justify-content-end'
               style="background-image: linear-gradient(rgba(232, 199, 192,.1), rgba(232, 199, 192,.1)), url(<%= latest_article_cover(category) %>);">
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mb-4">
             <%= link_to category.name, category_path(category), class:'category-style simple-link text-uppercase' %>
             <span><%= article_by_category(category) %></span>
           </div>
