--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,18 @@
 <main class="landing-page">
   <p id="notice" class="p-0 m-0"><%= notice %></p>
   <div class="" id="landscape">
-    <div class="top" style="background-image: linear-gradient(rgba(232, 199, 192,.2), rgba(232, 199, 192,.2)), url(<%= top_image(@top) %>);">
+    <div class="top d-flex flex-column justify-content-end" style="background-image: linear-gradient(rgba(232, 199, 192,.2), rgba(232, 199, 192,.2)), url(<%= top_image(@top) %>);">
       <div class="">
         <%= top_title_link(@top) %>
       </div>
-      <p class="top-text m-2 p-2"><%= top_content(@top) %></p>
+      <p class="top-text d-flex align-items-baseline"><%= top_content(@top) %></p>
     </div>
-
     <div class="landing-grid">
       <% @categories.each do |category| %>
-        <div class='category-articles d-flex flex-column justify-content-end'
+        <div class='category-articles d-flex flex-column'
               style="background-image: linear-gradient(rgba(232, 199, 192,.1), rgba(232, 199, 192,.1)), url(<%= latest_article_cover(category) %>);">
-          <div class="d-flex flex-column mb-4">
-            <%= link_to category.name, category_path(category), class:'category-style simple-link text-uppercase' %>
+          <div class="d-flex flex-column mb-4 pb-4 justify-content-between h-100">
+            <%= link_to category.name, category_path(category), class:'category-style simple-link text-uppercase text-decoration-underline' %>
             <span><%= article_by_category(category) %></span>
           </div>
         </div>
