--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,8 +7,8 @@
         <div class="d-flex flex-column">
           <div class="d-flex m-2 p-2 flex-column">
             <%= content_tag :p, @category.name %>
-            <div class="">
-              <%= content_tag :h2, art.title %>
+            <div class="text-decoration-non">
+             <h2><%= link_to art.title, article_path(art), class:'most-recent' %></h2>
             </div>  
             <%= read_more(art) %>
             <%= edit_if_owner(art) %>
