--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,8 @@ $white: #fff;
 
 .bg-linear-gradient {
     background:
-      repeating-linear-gradient( -55deg,
+      repeating-linear-gradient
+      (-55deg,
         $light-gray,
         $light-gray 2px,
         $white 2px,
