--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,6 +7,7 @@
  *= require_self
  */
 
+
 $dark-orange: #da2d08;
 $medium-orange: #f97210;
 $medium-gray: #a1a1a1;
@@ -39,6 +40,7 @@ $white: #fff;
   font-family: montserrat, sans-serif;
   height: 100vh;
   overflow: hidden;
+  
   ul,
   ol {
     list-style-type: none;
@@ -152,9 +154,9 @@ $white: #fff;
 }
 
 .footer {
-  background-color: #504e4e;
+  background-color: $dark-gray;
   bottom: 0px;
-  position:fixed;
+  position: fixed;
   z-index: 1500;
   width: 100vw;
   height: 6.85vh;
