--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -27,8 +27,7 @@ $white: #fff;
 
 .bg-linear-gradient {
   background:
-    repeating-linear-gradient(
-      -55deg,
+    repeating-linear-gradient( -55deg, 
       $light-gray,
       $light-gray 2px,
       $white 2px,
