--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,12 +29,13 @@ $white: #fff;
 }
 
 .bg-linear-gradient {
-  background: repeating-linear-gradient
-  (-55deg
-  , $light-gray,
-  $light-gray 2px,
-  $white 2px,
-  $white 4px);
+  background:
+    repeating-linear-gradient
+    (-55deg,
+    $light-gray,
+    $light-gray 2px,
+    $white 2px,
+    $white 4px);
 }
 
 .body {
@@ -156,7 +157,7 @@ $white: #fff;
 
 .footer {
   background-color: #504e4e;
-  bottom: 0px;
+  bottom: 0;
   position: fixed;
   z-index: 1500;
   width: 100vw;
