fix issue with navegation bar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
 
   <div class="d-flex justify-content-center align-items-center m-0 p-0">
     <ul class="d-flex align-items-center m-0 p-0 simple-list">
-      <% navbar(current_user) %>
+      <%= navbar(current_user) %>
     </ul>
   </div>
 </nav>
