--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,15 @@
       <p class="top-text d-flex align-items-baseline"><%= top_content(@top) %></p>
     </div>
     <div class="landing-grid">
-      <%= display_articles_by_category(@categories) %>
+  <% @categories.each do |category| %>
+        <div class='category-articles d-flex flex-column'
+              style="background-image: linear-gradient(rgba(232, 199, 192,.1), rgba(232, 199, 192,.1)), url(<%= latest_article_cover(category) %>);">
+          <div class="d-flex flex-column mb-4 pb-4 justify-content-between h-100">
+            <%= link_to category.name, category_path(category), class:'category-style simple-link text-uppercase text-decoration-underline' %>
+            <span><%= article_by_category(category) %></span>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </main>
